# GStech-code-Competitive-Air-Hockey-multi-social-Agents

./: .gitignore  README.md  ROS Agent Testing Guide  TRAINING.md  default_bus_layout.tres  export_presets.cfg  icon.svg.import  quickstart.sh  replay.py  requirements.txt  requirements_ppo.txt  test_ros_agent.py  verify_training.py
air_hockey_ros/: CMakeLists.txt  __init__.py  package.xml
air_hockey_ros/air_hockey_ros/: agent_node.py  agent_policy.py  game_manager.py  game_manager_node.py  registration.py  simulation.py
air_hockey_ros/air_hockey_ros/policy/: __init__.py  agent_policy.py  registration.py  team_policy.py
air_hockey_ros/air_hockey_ros/simulation/: simulation_interface.py
air_hockey_ros/game_scenarios/: simple_scenario.yaml
air_hockey_ros/launch/: single_game.launch.py
air_hockey_ros/msg/: AgentCommand.msg  WorldState.msg
air_hockey_ros/policies/simple_policy/: simple_crosser_agent_policy.py  simple_regional_agent_policy.py  simple_team_policy.py
air_hockey_ros/simulations/: __init__.py  setup.py
air_hockey_ros/simulations/base/: __init__.py  base_engine.py  base_simulation.py  rolling_queues.py  world_state_view.py
air_hockey_ros/simulations/mock/: mock_simulation.py
air_hockey_ros/srv/: StartGame.srv
src/air_hockey_ros/: CMakeLists.txt  __init__.py  setup.py
src/air_hockey_ros/air_hockey_ros/: __init__.py  agent_node.py  agent_policy.py  game_manager_node.py  registration.py  simulation.py  team_policy.py
src/air_hockey_ros/game_scenarios/: default_scenario.yaml  large_scenario.yaml  simple_scenario.yaml  small_scenario.yaml  wide_scenario.yaml
src/air_hockey_ros/launch/: multi_game.launch.py  single_game.launch.py
src/air_hockey_ros/launch/games_configs/: 1.yaml  2.yaml  extra_regular_tournament.yaml  long_short_tournament.yaml  long_short_tournament.yaml.yaml  neural_tournament.yaml  neural_tournament_1.yaml  neural_tournament_2.yaml  regular_tournament.yaml
src/air_hockey_ros/msg/: GameResult.msg  WorldState.msg
src/air_hockey_ros/policies/: __init__.py  setup.py
src/air_hockey_ros/policies/capped_neural_network_policy/: __init__.py  load_weights.py  neural_agent_ppo_policy.py  two_capped_neural_team_policy.py
src/air_hockey_ros/policies/five_neural_network_policy/: __init__.py  multiagent_paddle_net.py  neural_agent_policy.py  neural_team_policy.py
src/air_hockey_ros/policies/long_short_term_planner_policy/: __init__.py  bus.py  long_term_planner.py  ls_agent_policy.py  ls_team_policy.py  policy.py  (+7 more)
src/air_hockey_ros/simulations/: __init__.py
(+236 files in other folders)
