<?xml version="1.0"?>
<package format="3">
  <name>air_hockey_ros</name>
  <version>0.0.1</version>
  <description>ROS2 package for Air Hockey Game Manager and Agents</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For generating messages and services -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Mark as containing ROS interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
